[package]
name = "mewo"
version = "0.1.3"
edition = "2021"
description = "mewo - Simple, Lightweight ECS"
repository = "https://github.com/davnotdev/mewo"
homepage = "https://github.com/davnotdev/mewo"
license = "BSD-2-Clause"
readme = "../README.md"
keywords = ["gamedev", "game", "ecs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["derive"]
derive = ["dep:mewo_ecs_derive"]

[dependencies]
mewo_ecs = { version = "0.1.3", path = "../mewo_ecs/" }
mewo_ecs_derive = { version = "0.1.3", path = "../mewo_ecs_derive/", optional = true }
