[package]
name = "mewo_ecs"
version = "0.1.3"
edition = "2021"
description = "mewo_ecs - Simple, Lightweight ECS"
repository = "https://github.com/davnotdev/mewo"
homepage = "https://github.com/davnotdev/mewo"
license = "BSD-2-Clause"
readme = "../README.md"
keywords = ["gamedev", "game", "ecs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
