[package]
name = "mewo_ecs_derive"
version = "0.1.3"
edition = "2021"
description = "mewo_ecs_derive - mewo_ecs' derive macros"
repository = "https://github.com/davnotdev/mewo"
homepage = "https://github.com/davnotdev/mewo"
license = "BSD-2-Clause"
readme = "../README.md"
keywords = ["gamedev", "game", "ecs"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
