[package]
name = "gpu_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mewo_galaxy = { version = "*", path = "../../galaxy" }
mewo_window = { version = "*", path = "../../std/window" }
mewo_gpu = { version = "*", path = "../../std/gpu" }
