[package]
name = "termbird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mewo_term = { version = "*", path = "../../extras/mewo_term" }
rust_burrito = { version = "*", path = "../../core/rust_burrito" }
