[package]
name = "mewo_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mewo_ecs = { version = "*", path = "../../core/mewo_ecs/" }
rust_burrito = { version = "*", path = "../../core/rust_burrito/" }
