[package]
name = "mewo_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mewo_galaxy = { version = "*", path = "../../galaxy" }
mewo_galaxy_derive = { version = "*", path = "../../galaxy_derive" }
glfw = "0.45"
